# genai-project-template

./: LICENSE  cookiecutter.json  readme.md  template.py
{{cookiecutter.project_slug}}/: LICENSE  pyproject.toml
{{cookiecutter.project_slug}}/docs/: architecture.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py
{{cookiecutter.repo_name}}/: AUTHORS.rst  README.md  pyproject.toml
{{cookiecutter.repo_name}}/docs/: architecture.md
